[package]
name = "sp-authority-permission"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "The authority permission runtime api."
documentation = "https://docs.rs/sp-authority-permission"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
sp-consensus-slots = { version = "0.10.0-dev", path = "../../primitives/consensus/slots" }
